--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>Hello, Strangers!</h1>
 			<p>
-				Welcome to my blog, guys. This blog contains my quotes and ramblings for anyone who reads this website.
+				Welcome to my personal site, friends. This site contains my quotes, ramblings, and life.
 			</p>
 			<p>
 				Try to follow what I’m saying because if you miss an important point the thread will be lost & you will have to start again! Now I’ve given that warning it’s time to make a choice: The good: This website is very interesting — it has a lot of potential for different situations. The bad: it’s bloody frustrating if you fall off. The End.
