--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,7 +47,7 @@ main {
   width: 720px;
   max-width: calc(100% - 2em);
   margin: auto;
-  padding: 3em 1em;
+  padding: 6em 1em;
 }
 h1,
 h2,
@@ -132,7 +132,7 @@ hr {
     font-size: 18px;
   }
   main {
-    padding: 1em;
+    padding: 6em 1em;
   }
 }
 
@@ -152,4 +152,89 @@ hr {
   clip-path: inset(50%);
   /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
   white-space: nowrap;
+}
+
+header[data-astro-cid-3ef6ksr2] {
+  margin: 0;
+  padding: 0 1em;
+  background: #fff;
+  box-shadow: 0 2px 8px rgba(var(--black), 5%);
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+}
+
+h2[data-astro-cid-3ef6ksr2] {
+  margin: 0;
+  font-size: 1em;
+}
+
+h2[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2],
+h2[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2].active {
+  text-decoration: none;
+}
+
+nav[data-astro-cid-3ef6ksr2] {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 720px;
+  max-width: calc(100% - 2em);
+  margin: auto;
+}
+
+nav[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2] {
+  padding: 1em 0.5em;
+  color: var(--black);
+  border-bottom: 4px solid transparent;
+  text-decoration: none;
+}
+
+nav[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2].active {
+  text-decoration: none;
+  border-bottom-color: var(--accent);
+}
+
+.social-links[data-astro-cid-3ef6ksr2],
+.social-links[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2] {
+  display: flex;
+}
+
+@media (max-width: 720px) {
+  .social-links[data-astro-cid-3ef6ksr2] {
+    display: none;
+  }
+}
+
+footer[data-astro-cid-sz7xmlte] {
+  padding: 2em 1em 6em;
+  background: linear-gradient(var(--gray-gradient)) no-repeat;
+  color: rgb(var(--gray));
+  text-align: center;
+}
+
+.social-links[data-astro-cid-sz7xmlte] {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+  margin-top: 1em;
+}
+
+.social-links[data-astro-cid-sz7xmlte] a[data-astro-cid-sz7xmlte] {
+  text-decoration: none;
+  color: rgb(var(--gray));
+}
+
+.social-links[data-astro-cid-sz7xmlte] a[data-astro-cid-sz7xmlte]:hover {
+  color: rgb(var(--gray-dark));
+}
+
+a[data-astro-cid-eimmu3lg] {
+  display: inline-block;
+  text-decoration: none;
+}
+
+a[data-astro-cid-eimmu3lg].active {
+  font-weight: bolder;
+  text-decoration: underline;
 }
