--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -156,7 +156,7 @@ hr {
 
 header[data-astro-cid-3ef6ksr2] {
   margin: 0;
-  padding: 0 1em;
+  padding: 0;
   background: #fff;
   box-shadow: 0 2px 8px rgba(var(--black), 5%);
   position: fixed;
