--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -165,7 +165,7 @@ header[data-astro-cid-3ef6ksr2] {
 }
 
 h2[data-astro-cid-3ef6ksr2] {
-  margin: 0;
+  margin: 0 0 0 -.5em;
   font-size: 1em;
 }
 
