--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,12 +16,15 @@ import { SITE_TITLE } from '../consts';
 <style>
 	header {
 		margin: 0;
-		padding: 0 1em;
+		padding: 0;
 		background: white;
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
+  		position: fixed;
+  		z-index: 1;
+  		width: 100%;
 	}
 	h2 {
-		margin: 0;
+		margin: 0 0 0 -.5em;
 		font-size: 1em;
 	}
 
@@ -33,6 +36,9 @@ import { SITE_TITLE } from '../consts';
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+  		width: 720px;
+  		max-width: calc(100% - 2em);
+  		margin: auto;
 	}
 	nav a {
 		padding: 1em 0.5em;
