--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,9 +15,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<BaseHead title={title} description={description} />
 		<style>
 			main {
-				width: calc(100% - 2em);
-				max-width: 100%;
-				margin: 0;
+				width: 720px;
+				max-width: calc(100% - 2em);
+				margin: 0 auto;
 			}
 			.hero-image {
 				width: 100%;
@@ -30,9 +30,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			}
 			.prose {
 				width: 720px;
-				max-width: calc(100% - 2em);
+				max-width: calc(100%);
 				margin: auto;
-				padding: 1em;
+				padding: 1em 0;
 				color: rgb(var(--gray-dark));
 			}
 			.title {
