--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,8 +5,8 @@ const today = new Date();
 <footer>
 	&copy; {today.getFullYear()} Satrio Wibowo. All rights reserved.
 	<div class="social-links">
-		<a href="https://m.webtoo.ls/@astro" target="_blank">
-			<span class="sr-only">Follow Astro on Mastodon</span>
+		<a href="#" target="_blank">
+			<span class="sr-only">Follow Me on Mastodon</span>
 			<svg
 				viewBox="0 0 16 16"
 				aria-hidden="true"
@@ -19,8 +19,8 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
-		<a href="https://twitter.com/astrodotbuild" target="_blank">
-			<span class="sr-only">Follow Astro on Twitter</span>
+		<a href="https://twitter.com/sa3owibowo" target="_blank">
+			<span class="sr-only">Follow Me on Twitter</span>
 			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" astro-icon="social/twitter"
 				><path
 					fill="currentColor"
@@ -28,8 +28,8 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
-		<a href="https://github.com/withastro/astro" target="_blank">
-			<span class="sr-only">Go to Astro's GitHub repo</span>
+		<a href="https://github.com/sa3owibowo" target="_blank">
+			<span class="sr-only">Go to GitHub repo</span>
 			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32" astro-icon="social/github"
 				><path
 					fill="currentColor"
