--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from '../consts';
 
 <header>
 	<nav>
-		<h2><a href="/"><img width="50" height="50" src="https://cdn.jsdelivr.net/gh/sa3owibowo/img/yo.jpeg" alt="bgst"></a></h2>
+		<h2><a href="/"><img width="50" height="50" style="border-radius: 100%" src="https://cdn.jsdelivr.net/gh/sa3owibowo/img/yo.jpeg" alt="bgst"></a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
